# antumbra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ProjectOptions.cmake  README.md
.github/workflows/: auto-clang-format.yml  ci.yml  template-janitor.yml
antumbra/: CMakeLists.txt
antumbra/config/: CMakeLists.txt  config.hpp.in
antumbra/framework/: CMakeLists.txt
antumbra/framework/01core/ecs/: ecs.h
antumbra/framework/01core/input/: input.cpp  input.h
antumbra/framework/01core/io/: file_system.cpp  file_system.h  read.h  write.h
antumbra/framework/01core/logging/: log.cpp  log.h
antumbra/framework/01core/math/: color.h  math.h
antumbra/framework/01core/math/units/: units.cpp  units.h
antumbra/framework/01core/memory/: allocator.cpp  allocator.h  container.h  memory.cpp  memory.h  pmr.h  smart_ptr.h
antumbra/framework/01core/memory/allocators/: allocator.cpp  allocator.h  allocator2.cpp  allocator2.h  freelist_allocator.cpp  freelist_allocator.h  linear_allocator.cpp  linear_allocator.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
antumbra/framework/01core/platform/: platform.h
antumbra/framework/01core/reflection/: enum_reflection.h
antumbra/framework/01core/script/: lua_binding.h
antumbra/framework/01core/singleton/: public_singleton.h
antumbra/framework/01core/timer/: timer.h
antumbra/framework/01core/utils/: utils.h
antumbra/framework/02gal/: enum.h  format.h  gal.cpp  gal.h
antumbra/framework/02gal/d3d12/: gal_d3d12.cpp  gal_d3d12.h  gal_d3d12_enum.h  gal_d3d12_utils.h
antumbra/framework/02gal/debug/: debug_layer.cpp  debug_layer.h  readme.md
antumbra/framework/02gal/dxc/: compile_settings.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h
antumbra/framework/02gal/helper/: function_loader.h  helper_macro.h
antumbra/framework/02gal/shader/: compile_desc.h  shader.h  shader_compiler.cpp  shader_compiler.h  shader_reflection.cpp  shader_reflection.h  spirv_reflection.cpp  spirv_reflection.h
antumbra/framework/02gal/shader_compiler/: shader_compiler.cpp  shader_compiler.h
antumbra/framework/02gal/vulkan/: gal_vulkan.cpp  gal_vulkan.h  gal_vulkan_enum.h  gal_vulkan_utils.h
antumbra/framework/gal/: enum.h  format.h  gal.h
antumbra/framework/gal/d3d12/: gal_d3d12.cpp  gal_d3d12.h  gal_d3d12_enum.h  gal_d3d12_utils.h
antumbra/framework/gal/shader/: shader_compiler.cpp  shader_compiler.h  shader_reflection.cpp
antumbra/framework/gal/vulkan/: gal_vulkan.cpp  gal_vulkan.h  gal_vulkan_enum.h  gal_vulkan_utils.h
antumbra/framework/utils/: helper.h
antumbra/framework/utils/blob/: blob.h
antumbra/framework/utils/input/: input.h
antumbra/framework/utils/io/: file_system.cpp  file_system.h  read.h  write.h
antumbra/framework/utils/logging/: log.h
antumbra/framework/utils/math/: math.h
antumbra/framework/utils/memory/: allocator2.h  container.h  memory.cpp  memory.h  readme.md
antumbra/framework/utils/platform/: platform.h
antumbra/framework/utils/singleton/: public_singleton.h
antumbra/framework/utils/types/: types.h
antumbra/tests/: CMakeLists.txt  test.cpp
antumbra/tests/01core/: bench_allocator.cpp  test_allocator.cpp  test_ecs.cpp  test_io.cpp  test_log.cpp  test_math.cpp  test_memory.cpp  test_reflection.cpp  test_script.cpp  test_timer.cpp
antumbra/tests/02gal/: test_d3d12.cpp  test_dxc.cpp  test_gal.cpp  test_gal.h  test_vulkan.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  CopyDll.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
config/: CMakeLists.txt  config.hpp.in
docs/designs/01core/: input.md
docs/designs/02gal/: gal.md
docs/designs/03gfx/: render_graph.md
samples/: CMakeLists.txt
samples/01hellowindow/: main.cpp
samples/02hellotriangle/: main.cpp
tests/: CMakeLists.txt  test_dxc.cpp  test_gal.cpp
tests/01core/: bench_allocator.cpp  test_allocator.cpp  test_ecs.cpp  test_io.cpp  test_log.cpp  test_memory.cpp  test_reflection.cpp  test_script.cpp  test_timer.cpp
tests/02gal/: test_dxc.cpp  test_gal.cpp  test_gal.h
